[package]
name = "green-lib"
version = "0.6.2"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.37", features = [ "fs" ] }
sha2 = "0.10"
async-recursion = "1.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "rustls-tls" ]
