[package]
name = "green-lib"
version = "0.7.2"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.38", features = [ "fs" ] }
sha2 = "0.10"
async-recursion = "1.1"
once_cell = "1.19"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "rustls-tls" ]
